Working, including "wait" message